ruinan site added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <i>Team members' page links</i>
             <ul>
                 <li>
-                    <a href="/">Team member 1</a>
+                    <a href="/members/ruinan/index.html">Ruinan Ma</a>
                 </li>
                 <li>
                     <a href="/">Team member 2</a>
