all members added

--- a/index.html
+++ b/index.html
@@ -18,16 +18,13 @@
             <i>Team members' page links</i>
             <ul>
                 <li>
-                    <a href="/members/ruinan/index.html">Ruinan Ma</a>
+                    <a href="/members/ruinan/">Ruinan Ma</a>
                 </li>
                 <li>
-                    <a href="/">Team member 2</a>
+                    <a href="/members/will_luo/">Will Luo</a>
                 </li>
                 <li>
-                    <a href="/">Team member 3</a>
-                </li>
-                <li>
-                    <a href="/">Team member 4</a>
+                    <a href="/members/haochen/">Haochen Jiang</a>
                 </li>
             </ul>
         </aside>
