--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="CSE 135 Spring 2023">
     <link rel="stylesheet" href="styles.css" type="text/css">
+	<link rel="icon" href="favicon_io/favicon.ico">
     <title>CSE135 Website</title>
 </head>
 
