--- a/members/haochen/index.html
+++ b/members/haochen/index.html
@@ -1,24 +1,81 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <p>Haochen</p>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - CV</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        img.profile {
+            width: 150px;
+            height: auto;
+            border-radius: 50%;
+        }
+        .section {
+            margin-bottom: 2rem;
+        }
+    </style>
+</head>
+<body>
+    <h1>Haochen Jiang</h1>
+    <img src="myphoto.jpg" alt="Your Name" class="profile">
+    <h2>Contact Information</h2>
+    <ul>
+        <li>Email: haj003@ucsd.edu</li>
+        <li>Phone: (858) 405-0805</li>
+        <li>LinkedIn: https://www.linkedin.com/in/haochen-jiang-743b6824a/</li>
+    </ul>
 
-        
-        <script src="" async defer></script>
-    </body>
+    <div class="section">
+        <h2>Career Objective</h2>
+        <p>Write a brief description of your career objectives here.</p>
+    </div>
+
+    <div class="section">
+        <h2>Skills</h2>
+        <ul>
+            <li>Skill 1</li>
+            <li>Skill 2</li>
+            <li>Skill 3</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>Work Experience</h2>
+        <h3>Job Title 1</h3>
+        <h4>Company Name, City, Country</h4>
+        <h4>Dates of Employment</h4>
+        <ul>
+            <li>Job Responsibility 1</li>
+            <li>Job Responsibility 2</li>
+            <li>Job Responsibility 3</li>
+        </ul>
+
+        <h3>Job Title 2</h3>
+        <h4>Company Name, City, Country</h4>
+        <h4>Dates of Employment</h4>
+        <ul>
+            <li>Job Responsibility 1</li>
+            <li>Job Responsibility 2</li>
+            <li>Job Responsibility 3</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>Education</h2>
+        <h3>BS. Computer Engineering</h3>
+        <h4>University of California, San Diego</h4>
+        <h4>Graduate in 2025</h4>
+    </div>
+</body>
 </html>
