--- a/members/ruinan/index.html
+++ b/members/ruinan/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<div class="hw4-delibery">
-		<a href="/nativedialogs.html">Native Dialogs</a> |
+		<a href="/members/ruinan/nativedialogs.html">Native Dialogs</a> |
 		<a href="/customdialogs.html">Custom Dialogs</a> |
 		<a href="/crud.html">CRUD</a> | 
 		<a href="/styledcrud.html">Styled CRUD</a> 
