--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
         <aside>
-            <h2>Monster Team 4</h2>
+            <h2>Monster Team</h2>
             <i>Team members' page links</i>
             <ul>
                 <li>
