--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="CSE 135 Spring 2023">
     <link rel="stylesheet" href="styles.css" type="text/css">
 	<link rel="icon" href="favicon_io/favicon.ico">
-    <title>CSE135 Website</title>
+    <title>CSE135 Website!</title>
 </head>
 
 <body>
