--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2 class="hw-title">Homework 1</h2>
         <ul class="hw-content">
             <li>
-                <a href="/">PHP</a>
+                <a href="/hello.php">PHP</a>
             </li>
             <li>
                 <a href="/">Node</a>
