--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </li>
             </ul>
         </aside>
-        <h1>CSE 135!</h1>
+        <h1>CSE 135!!!!</h1>
         <h2>Spring 2023</h2>
 
         <br><br><br>
