--- a/members/haochen/index.html
+++ b/members/haochen/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,23 +10,46 @@
             font-family: Arial, sans-serif;
             line-height: 1.6;
         }
-        h1, h2, h3 {
+
+        h1,
+        h2,
+        h3 {
             color: #333;
         }
+
         ul {
             list-style: none;
             padding: 0;
         }
+
         img.profile {
             width: 150px;
             height: auto;
             border-radius: 50%;
         }
+
         .section {
             margin-bottom: 2rem;
         }
     </style>
+    <!-- Matomo -->
+    <script>
+        var _paq = window._paq = window._paq || [];
+        /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+        _paq.push(['trackPageView']);
+        _paq.push(['enableLinkTracking']);
+        (function () {
+            var u = "//cse135.monster/matomo/";
+            _paq.push(['setTrackerUrl', u + 'matomo.php']);
+            _paq.push(['setSiteId', '1']);
+            var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+            g.async = true; g.src = u + 'matomo.js'; s.parentNode.insertBefore(g, s);
+        })();
+    </script>
+    <!-- End Matomo Code -->
+
 </head>
+
 <body>
     <h1>Haochen Jiang</h1>
     <img src="myphoto.jpg" alt="Your Name" class="profile">
@@ -78,4 +102,5 @@
         <h4>Graduate in 2025</h4>
     </div>
 </body>
+
 </html>
