--- a/members/ruinan/index.html
+++ b/members/ruinan/index.html
@@ -9,14 +9,30 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+	<!-- Matomo -->
+	<script>
+		var _paq = window._paq = window._paq || [];
+		/* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+		_paq.push(['trackPageView']);
+		_paq.push(['enableLinkTracking']);
+		(function () {
+			var u = "//cse135.monster/matomo/";
+			_paq.push(['setTrackerUrl', u + 'matomo.php']);
+			_paq.push(['setSiteId', '1']);
+			var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+			g.async = true; g.src = u + 'matomo.js'; s.parentNode.insertBefore(g, s);
+		})();
+	</script>
+	<!-- End Matomo Code -->
+
 </head>
 
 <body>
 	<div class="hw4-delibery">
 		<a href="/members/ruinan/nativedialogs.html">Native Dialogs</a> |
 		<a href="/customdialogs.html">Custom Dialogs</a> |
-		<a href="/crud.html">CRUD</a> | 
-		<a href="/styledcrud.html">Styled CRUD</a> 
+		<a href="/crud.html">CRUD</a> |
+		<a href="/styledcrud.html">Styled CRUD</a>
 		<a href="/methodtest.html">Method Test</a>
 		<a href="/webcomponent.html">Web Component</a>
 	</div>
@@ -127,7 +143,7 @@
 			</ul>
 			</p>
 			<h3>Courses I'm going to take in Spring 2023:</h3>
-			<p> <i> <a href="#contact">Contact me</a>  if you also plan to take these!</i>
+			<p> <i> <a href="#contact">Contact me</a> if you also plan to take these!</i>
 			<ul>
 				<li>CSE 105: Theory of Computation</li>
 				<li>CSE 120: Operating System</li>
