fixed file path

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         <h2 class="hw-title">Homework 1</h2>
         <ul class="hw-content">
             <li>
-                <a href="/hello.php">PHP</a>
+                <a href="/hw1/hello.php">PHP</a>
             </li>
             <li>
-                <a href="/">Node</a>
+                <a href="/hw1/report.html">Report</a>
             </li>
             <li>
-                <a href="/">Analytics</a>
+                <a href="/matomo/index.php">Matomo Analytics</a>
             </li>
         </ul>
 
@@ -67,8 +67,6 @@
         <h2 class="hw-title">Homework 3</h2>
         <div class="hw-content">TBA</div>
         <h2 class="hw-title">Homework 4</h2>
-        <div class="hw-content">TBA</div>
-        <h2 class="hw-title">Analytics App</h2>
         <div class="hw-content">TBA</div>
 
 
