--- a/members/ruinan/index.html
+++ b/members/ruinan/index.html
@@ -30,11 +30,11 @@
 <body>
 	<div class="hw4-delibery">
 		<a href="/members/ruinan/nativedialogs.html">Native Dialogs</a> |
-		<a href="/customdialogs.html">Custom Dialogs</a> |
-		<a href="/crud.html">CRUD</a> |
-		<a href="/styledcrud.html">Styled CRUD</a>
-		<a href="/methodtest.html">Method Test</a>
-		<a href="/webcomponent.html">Web Component</a>
+		<a href="/members/ruinan/customdialogs.html">Custom Dialogs</a> |
+		<a href="/members/ruinan/crud.html">CRUD</a> |
+		<a href="/members/ruinan/styledcrud.html">Styled CRUD</a>
+		<a href="/members/ruinan/methodtest.html">Method Test</a>
+		<a href="/members/ruinan/webcomponent.html">Web Component</a>
 	</div>
 	<header id="top-header">
 		<div class="top-header-container">
@@ -142,11 +142,13 @@
 				<li>ECE 141A: Software Foundation I </li>
 			</ul>
 			</p>
-			<h3>Courses I'm going to take in Spring 2023:</h3>
+			<h3>Courses I'm curently in Spring 2023:</h3>
 			<p> <i> <a href="#contact">Contact me</a> if you also plan to take these!</i>
 			<ul>
 				<li>CSE 105: Theory of Computation</li>
 				<li>CSE 120: Operating System</li>
+				<li>CSE 135: Online Analytics</li>
+				<li>CSE 140: Compnents and Design Techniques for Digital Systems</li>
 				<li>CSE 168: Computer Graphics II: Rendering</li>
 				<li>CSE 150B: Intro to AI: Searching and Reasoning</li>
 			</ul>
