--- a/members/will_luo/styledcrud.html
+++ b/members/will_luo/styledcrud.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" media="screen and (min-width: 768px)" href="css/styledcrud_pc.css">
-    <link rel="stylesheet" media="screen and (min-width: 640px) and (max-width: 767px)" href="css/styledcrud_tablet.css">
+    <link rel="stylesheet" media="screen and (min-width: 640px) and (max-width: 767px)"
+        href="css/styledcrud_tablet.css">
     <link rel="stylesheet" media="screen and (max-width: 639px)" href="css/styledcrud_mobile.css">
     <title>Styled Blog CRUD</title>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PW0FF1MSLF"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-PW0FF1MSLF');
+    gtag('config', 'G-PW0FF1MSLF');
 </script>
+
 <body>
     <header>
         <nav>
@@ -41,14 +44,15 @@
         </ul>
         <button id="addBlogBtn">Add Blog</button>
     </main>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/dompurify@2.3.1/dist/purify.min.js"></script>
     <!-- <script src="/node_modules/dompurify/dist/purify.js"></script> -->
 
     <script type="module">
-        import {init, addBlog} from "./js/blog2.js";
+        import { init, addBlog } from "./js/blog2.js";
         window.addEventListener("DOMContentLoaded", init);
         document.getElementById("addBlogBtn").onclick = addBlog;
     </script>
 </body>
+
 </html>
